Fix T37463: Increasing window size would add space around menu header